# ut_bsp_tool

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  create_world.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  polygon.cpp  polygon.h  ut_bsp_tool.qrc
apps/: CMakeLists.txt  create_world.cpp  crosshairgraphicsitem.cpp  crosshairgraphicsitem.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  partitionline.cpp  partitionline.h  treenode.cpp  treenode.h
bsp/: CMakeLists.txt  bsp.cpp  bsp.h  player.cpp  player.h  polygon.cpp  polygon.h  world.cpp  world.h  worldline.cpp  worldline.h
tests/: CMakeLists.txt  tests.cpp
worlds/: world_01.json
